// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DiffLegend DOM 快照 > 帶自訂 className 的圖例結構快照 1`] = `
<div
  class="flex flex-wrap items-center gap-3 text-xs text-muted-foreground mt-4 justify-end"
>
  <span
    class="font-medium text-foreground"
  >
    差異說明：
  </span>
  <span
    class="flex items-center gap-1.5"
  >
    <span
      class="size-2.5 rounded-full bg-emerald-500"
    />
    新增
  </span>
  <span
    class="flex items-center gap-1.5"
  >
    <span
      class="size-2.5 rounded-full bg-red-400"
    />
    移除
  </span>
  <span
    class="flex items-center gap-1.5"
  >
    <span
      class="size-2.5 rounded-full bg-amber-400"
    />
    已修改
  </span>
</div>
`;

exports[`DiffLegend DOM 快照 > 預設圖例結構快照 1`] = `
<div
  class="flex flex-wrap items-center gap-3 text-xs text-muted-foreground"
>
  <span
    class="font-medium text-foreground"
  >
    差異說明：
  </span>
  <span
    class="flex items-center gap-1.5"
  >
    <span
      class="size-2.5 rounded-full bg-emerald-500"
    />
    新增
  </span>
  <span
    class="flex items-center gap-1.5"
  >
    <span
      class="size-2.5 rounded-full bg-red-400"
    />
    移除
  </span>
  <span
    class="flex items-center gap-1.5"
  >
    <span
      class="size-2.5 rounded-full bg-amber-400"
    />
    已修改
  </span>
</div>
`;
